--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "build" : "npm install"
+    "build": "npm install"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/muhazAhmed/Shopping-List.git"
+    "url": ""
   },
-  "author": "Muhaz Ahmed",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/muhazAhmed/Shopping-List/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/muhazAhmed/Shopping-List#readme",
+  "homepage": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
   }
